Refactoring work on tournament controller & tournament service
